reference-architectures/multicluster-patterns/quickstart-multi-zone-deploy/manifests/overlays/config-cluster/route.yaml
# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: public-app-route
  labels:
    gateway: app-gateway
spec:
  #hostnames:
  #- "flask-app.example.com"
  parentRefs:
  - name: app-gateway
  rules:
  - backendRefs:
    - group: net.gke.io
      kind: ServiceImport
      name: flask-app
      port: 8080
